--- a/styles.css
+++ b/styles.css
@@ -39,13 +39,19 @@
 }
 
 .posts {
+  padding-left: calc(50% - 230px);
+  padding-right: calc(50% - 230px);
   display: flex;
   flex-direction: column;
   list-style: none;
-  padding: 0;
-  margin: 0;
+  margin:0;
 }
-
+.post{
+  padding: 10px 30px;
+  margin: 20px 0;
+  box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+}
 .post-header {
   display: flex;
   flex-direction: row;
