--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,6 @@
   width: 130px;
 }
 
-.header-container {
-  margin-bottom: 8px;
-}
 
 .header-button {
   padding: 0;
@@ -76,7 +73,6 @@
   height: 500px;
   display: flex;
   justify-content: center;
-  background-color: #e0e0e0;
 }
 
 .post-image {
@@ -120,10 +116,18 @@
 }
 
 .posts-user-header {
+  padding: 20px calc(50% - 600px);
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-bottom: 12px;
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  border-radius: 20px;
+}
+.posts-user{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  column-gap: 100px;
 }
 
 .posts-user-header__user-image {
@@ -204,4 +208,11 @@
   box-sizing: border-box;
   width: 100%;
   text-align: center;
+}
+
+@media (max-width:1140px) {
+  .posts-user{
+    grid-template-columns: repeat(1,1fr);
+  }
+  
 }
