--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,9 @@
   font-weight: 500;
   cursor: pointer;
 }
+.add-post-sign:hover{
+  animation: addButton 2s ease 0s 1 normal forwards;
+}
 
 .logout-button {
   width: 130px;
@@ -96,6 +99,9 @@
   padding-bottom: 5px;
   cursor: pointer;
 }
+.like-button:hover{
+  animation: likeButton 2s ease 0s 1 normal forwards;
+}
 
 .user-name {
   font-weight: 500;
@@ -142,7 +148,21 @@
   font-size: 28px;
   line-height: 35px;
 }
-
+.delete-button{
+  display: inline-block;
+  margin-left: 20px;
+  background-color: #FA8072;
+  padding: 10px 13px 13px;
+  font-size: 18px;
+  line-height: 22px;
+  border-radius: 5px;
+  color: #ffffff;
+  border: none;
+  transition: all 0.3s;
+}
+.delete-button:hover{
+  transform: scale(1.06);
+}
 .loading-page {
   display: flex;
   justify-content: center;
@@ -215,4 +235,63 @@
     grid-template-columns: repeat(1,1fr);
   }
   
+}
+@keyframes likeButton {
+	0%,
+	100% {
+		transform: rotate(0deg);
+		transform-origin: 50% 50%;
+	}
+
+	10% {
+		transform: rotate(8deg);
+	}
+
+	20%,
+	40%,
+	60% {
+		transform: rotate(-10deg);
+	}
+
+	30%,
+	50%,
+	70% {
+		transform: rotate(10deg);
+	}
+
+	80% {
+		transform: rotate(-8deg);
+	}
+
+	90% {
+		transform: rotate(8deg);
+	}
+}
+
+@keyframes addButton {
+	0% {
+		animation-timing-function: ease-out;
+		transform: scale(1);
+		transform-origin: center center;
+	}
+
+	10% {
+		animation-timing-function: ease-in;
+		transform: scale(0.91);
+	}
+
+	17% {
+		animation-timing-function: ease-out;
+		transform: scale(0.98);
+	}
+
+	33% {
+		animation-timing-function: ease-in;
+		transform: scale(0.87);
+	}
+
+	45% {
+		animation-timing-function: ease-out;
+		transform: scale(1);
+	}
 }
